# 4DOF_Robotic_Arm

./: README.md
robot_arm/: CMakeLists.txt  package.xml
robot_arm/launch/: display.launch
robot_arm/meshes/: base_link.STL  gripper_left.STL  gripper_right.STL  link1.STL  link2.STL  link3.STL  link4.STL
robot_arm/sdf/: box.sdf
robot_arm/urdf/: robot_arm.csv  robot_arm.urdf
robot_moveit/: package.xml
robot_moveit/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  robot_arm.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml
robot_moveit/launch/: demo.launch  gazebo.launch  moveit.rviz  planning_context.launch  robot_start_control.launch  robot_start_gazebo.launch  robot_start_planning.launch  ros_controllers.launch  sensor_manager.launch.xml  spawn_box.launch  spawn_sdf.launch
robot_moveit/src/: error.txt  get_joint_status.py  joint_degree.py  main.py  setpoint.py  spawn_box.py  sub.ino
robot_moveit/src/arduino/: joints_code.cpp
robot_moveit/src/arduino/sub/: sub.ino
robot_moveit/src/arduino/sub_motor/: sub_motor.ino
